# aws-free-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run-aws-free-guard.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
specs/001-a-powerful-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-a-powerful-cli/contracts/: clean_command.json  free_command.json
src/: __init__.py
src/cli/: __init__.py  commands.py  main.py
src/models/: __init__.py  aws_account.py  aws_resource.py  free_tier_limit.py  operation_result.py
tests/: __init__.py
tests/contract/: __init__.py  test_clean_command.py  test_free_command.py
tests/integration/: __init__.py  test_clean_flow.py  test_free_flow.py
